src/objects/TIMBASURVEYS__Survey__c.object
<CustomObject>
    <fields>
        <fullName>TIMBASURVEYS__AllowAnonymousRecipients__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AllowAnonymousRecipients</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__AllowMultiFill__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AllowMultiFill</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__CollectedResponses__c</fullName>
        <label>CollectedResponses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__CollectingData__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CollectingData</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__CreateLeads__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CreateLeads</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__Description2__c</fullName>
        <label>Description2</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__Expiration_Date_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Expiration Date Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__Expiration_Date__c</fullName>
        <description>Date when the survey cannot be filled anymore.</description>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__FirstCollection__c</fullName>
        <label>FirstCollection</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__NotificationEmail__c</fullName>
        <label>NotificationEmail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__NotifyResponses__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NotifyResponses</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__NumberOfPages__c</fullName>
        <label>NumberOfPages</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__NumberOfQuestions__c</fullName>
        <label>NumberOfQuestions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__QuestionsPerPage__c</fullName>
        <label>QuestionsPerPage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__RelatedAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RelatedAccount</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Survey</relationshipLabel>
        <relationshipName>Survey</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__RelatedCase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RelatedCase</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Survey</relationshipLabel>
        <relationshipName>Survey</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__RelatedContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RelatedContact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Survey</relationshipLabel>
        <relationshipName>Survey</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__RelatedContract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RelatedContract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Survey</relationshipLabel>
        <relationshipName>Survey</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__RelatedLead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RelatedLead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Survey</relationshipLabel>
        <relationshipName>Survey</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__RelatedObjectId__c</fullName>
        <label>RelatedObjectId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__RelatedOpportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RelatedOpportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Survey</relationshipLabel>
        <relationshipName>Survey</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__RelatedSolution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RelatedSolution</label>
        <referenceTo>Solution</referenceTo>
        <relationshipLabel>Survey</relationshipLabel>
        <relationshipName>Survey</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__RequireLeads__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RequireLeads</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__SalesforceBaseURL__c</fullName>
        <label>SalesforceBaseURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__SurveyEmailTemplatePlain__c</fullName>
        <label>SurveyEmailTemplatePlain</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__SurveyEmailTemplate__c</fullName>
        <label>SurveyEmailTemplate</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__SurveyTheme__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SurveyTheme</label>
        <referenceTo>TIMBASURVEYS__SurveyTheme__c</referenceTo>
        <relationshipLabel>Survey</relationshipLabel>
        <relationshipName>Survey</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__TimesSent__c</fullName>
        <defaultValue>0</defaultValue>
        <label>TimesSent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__Version__c</fullName>
        <label>Version</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Survey</label>
    <nameField>
        <label>Survey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>